<resources>
    <string name="app_name" translatable="false">HexViewer</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="action_open_title">Open</string>
    <string name="action_plain_text_title">Plain text</string>
    <string name="action_save_title">Save</string>
    <string name="action_save_as_title">Save As &#8230;</string>
    <string name="action_close_title">Close</string>
    <string name="action_settings_title">Settings</string>
    <string name="action_recently_open_title">Recently opened</string>
    <string name="loading">Loading&#8230;</string>
    <string name="saving">Saving&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="on_double_back_exit_text">Press once again to exit!</string>
    <string name="update">Update</string>
    <string name="update_hint_hex">Text</string>
    <string name="update_hint_plain">Plain text</string>
    <string name="error_not_supported_in_plain_text">Operation not supported during plain text display</string>
    <string name="error_filename">Invalid file name!</string>
    <string name="save_success">Save success.</string>
    <string name="operation_canceled">Operation cancelled</string>
    <string name="exception">Exception</string>
    <string name="confirm_overwrite">The file exists are you sure you want to overwrite it?</string>
    <string name="open_a_file_before">Open a file before!</string>
    <string name="file_manager_keyword">File manager</string>
    <string name="select_file_to_open">Select a file to open.</string>
    <string name="error_no_file_manager">Please install a File Manager.</string>
    <string name="install">INSTALL</string>
    <string name="please_open_file">Please open a file</string>
    <string name="uri_exception">Uri exception</string>
    <string name="source">Source:</string>
    <string name="result">Result:</string>
    <string name="empty_value">Empty</string>

    <string name="content_description_undo" translatable="false">Undo</string>
    <string name="content_description_redo" translatable="false">Redo</string>
    <string name="default_abbreviate_portrait" translatable="false">8</string>
    <string name="default_abbreviate_landscape" translatable="false">16</string>
    <string name="default_hex_row_height_auto" translatable="false">true</string>
    <string name="default_hex_row_height" translatable="false">100</string>
    <string name="default_hex_font_size" translatable="false">12</string>
    <string name="default_plain_row_height_auto" translatable="false">true</string>
    <string name="default_plain_row_height" translatable="false">100</string>
    <string name="default_plain_font_size" translatable="false">12</string>
    <string name="default_smart_input" translatable="false">false</string>

    <string name="new_value">New value</string>
    <string name="error_less_than">The value cannot be less than</string>
    <string name="error_greater_than">The value cannot be greater than</string>
    <string name="settings_category_abbreviate">Abbreviate</string>
    <string name="settings_pref_title_abbreviate_portrait">Portrait mode</string>
    <string name="settings_pref_summary_abbreviate_portrait">The number of characters to display for the file name in portrait mode.</string>
    <string name="settings_pref_title_abbreviate_landscape">Landscape mode</string>
    <string name="settings_pref_summary_abbreviate_landscape">The number of characters to display for the file name in landscape mode.</string>
    <string name="settings_category_hex">Text in hex</string>
    <string name="settings_pref_title_hex_row_height_auto">Automatic height</string>
    <string name="settings_pref_summary_hex_row_height_auto">Automatically determines height based on font size.</string>
    <string name="settings_pref_title_hex_row_height">Height</string>
    <string name="settings_pref_summary_hex_row_height">Height of the row in the list.</string>
    <string name="settings_pref_title_hex_font_size">Font size</string>
    <string name="settings_pref_summary_hex_font_size">Font size of the texts in the list.</string>
    <string name="settings_category_plain">Plain text</string>
    <string name="settings_pref_title_plain_row_height_auto">Automatic height</string>
    <string name="settings_pref_summary_plain_row_height_auto">Automatically determines height based on font size.</string>
    <string name="settings_pref_title_plain_row_height">Height</string>
    <string name="settings_pref_summary_plain_row_height">Height of the row in the list.</string>
    <string name="settings_pref_title_plain_font_size">Font size</string>
    <string name="settings_pref_summary_plain_font_size">Font size of the texts in the list.</string>
    <string name="settings_category_about">About</string>
    <string name="settings_pref_title_version">Version</string>
    <string name="settings_pref_title_license">License</string>
    <string name="settings_pref_summary_license" translatable="false">GPLv3</string>
    <string name="settings_category_general">General</string>
    <string name="settings_pref_title_language">Language</string>
    <string name="settings_pref_summary_language">Change the language of the application.</string>
    <string name="smart_input">Plain text input</string>
    <string name="error_file_not_found">The file %1$s was not found</string>
    <string name="error_file_permission">No permission has been granted for file %1$s</string>
    <string name="items_selected">%1$d Selected</string>
    <string name="confirm_save">Save file "%1$s"?</string>
    <string name="control_language_change">Please save your work first.</string>
    <string name="app_settings">Settings</string>
</resources>