<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="prefScreen">

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_category_general"
        android:layout="@layout/preference_category">
        <androidx.preference.ListPreference
            android:entries="@array/languages_entries"
            android:entryValues="@array/languages_values"
            android:key="language"
            android:summary="@string/settings_pref_summary_language"
            android:title="@string/settings_pref_title_language" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_category_abbreviate"
        android:layout="@layout/preference_category">
        <androidx.preference.Preference
            android:key="abbreviatePortrait"
            android:summary="@string/settings_pref_summary_abbreviate_portrait"
            android:title="@string/settings_pref_title_abbreviate_portrait" />
        <androidx.preference.Preference
            android:key="abbreviateLandscape"
            android:summary="@string/settings_pref_summary_abbreviate_landscape"
            android:title="@string/settings_pref_title_abbreviate_landscape" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_category_hex"
        android:layout="@layout/preference_category">
        <androidx.preference.CheckBoxPreference
            android:key="hexRowHeightAuto"
            android:summary="@string/settings_pref_summary_hex_row_height_auto"
            android:title="@string/settings_pref_title_hex_row_height_auto" />
        <androidx.preference.Preference
            android:key="hexRowHeight"
            android:summary="@string/settings_pref_summary_hex_row_height"
            android:title="@string/settings_pref_title_hex_row_height" />
        <androidx.preference.Preference
            android:key="hexFontSize"
            android:summary="@string/settings_pref_summary_hex_font_size"
            android:title="@string/settings_pref_title_hex_font_size" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_category_plain"
        android:layout="@layout/preference_category">
        <androidx.preference.CheckBoxPreference
            android:key="plainRowHeightAuto"
            android:summary="@string/settings_pref_summary_plain_row_height_auto"
            android:title="@string/settings_pref_title_plain_row_height_auto" />
        <androidx.preference.Preference
            android:key="plainRowHeight"
            android:summary="@string/settings_pref_summary_plain_row_height"
            android:title="@string/settings_pref_title_plain_row_height" />
        <androidx.preference.Preference
            android:key="plainFontSize"
            android:summary="@string/settings_pref_summary_plain_font_size"
            android:title="@string/settings_pref_title_plain_font_size" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
