<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hex_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/containerUndo"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/action_undo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_undo"
                    android:src="@drawable/ic_undo_disabled"
                    android:text="@null" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/containerRedo"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/action_redo"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description_redo"
                    android:src="@drawable/ic_redo_disabled"
                    android:text="@null" />

            </FrameLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_recently_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:text="@string/action_recently_open_title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <LinearLayout
            android:id="@+id/action_plain_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_recently_open">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/action_plain_text_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:text="@string/action_plain_text_title"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/action_plain_text_cb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_plain_text_container"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:text="@string/action_save_title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_save_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_save"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:text="@string/action_save_as_title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_save_as"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:text="@string/action_close_title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_close"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:text="@string/action_settings_title"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    </RelativeLayout>

</ScrollView>