<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="vertical">

    <include layout="@layout/hex_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/pref_shadow_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/source" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@null"
        android:textSize="16sp"
        android:typeface="monospace" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkSmartInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:text="@string/smart_input" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@drawable/border">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:typeface="monospace" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInputHex"
            style="@style/TextInputLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/AppThemeHex.ErrorTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInputHex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="top"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/update_hint_hex"
                android:inputType="textMultiLine"
                android:textSize="12sp"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>